--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting...</title>
+    <link rel="canonical" href="http://ssrf1.secu-web.blackfoot.dev:80/secret">
+    <meta http-equiv="refresh" content="0; url=http://ssrf1.secu-web.blackfoot.dev:80/secret">
+  </head>
+  <body>
+    Redirecting...
+  </body>
+</html>
