--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta http-equiv="refresh" content="0; URL='https://example.com/'" />
+    <script type="text/javascript">
+        window.location.href = "https://example.com/";
+    </script>
     <title>Redirecting...</title>
-    <link rel="canonical" href="http://ssrf1.secu-web.blackfoot.dev:80/secret">
-    <meta http-equiv="refresh" content="0; url=http://ssrf1.secu-web.blackfoot.dev:80/secret">
-  </head>
-  <body>
-    Redirecting...
-  </body>
+</head>
+<body>
+    <p>If you are not redirected, <a href="https://example.com/">click here to continue.</a></p>
+</body>
 </html>
