--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://example.com/'" />
+    <meta http-equiv="refresh" content="0; URL='http://ssrf1.secu-web.blackfoot.dev/secret'" />
     <script type="text/javascript">
-        window.location.href = "https://example.com/";
+        window.location.href = "http://ssrf1.secu-web.blackfoot.dev/secret";
     </script>
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://example.com/">click here to continue.</a></p>
+    <p>If you are not redirected, <a href="http://ssrf1.secu-web.blackfoot.dev/secret">click here to continue.</a></p>
 </body>
 </html>
